# serenity-embed-builder

./: CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yaml  release.yaml
src/: embed.rs  lib.rs  message.rs  model.rs  types.rs
src/model/: embed.rs  message.rs
