[package]
name = "serenity-builder"
description = "A utility library to make Serenity's builder easier to use."
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/m1sk9/serenity-builder"
documentation = "https://docs.rs/serenity-builder"
homepage = "https://m1sk9.dev"
keywords = ["discord", "api", "serenity", "builder", "utility"]

[features]
default = ["embed", "message"]
embed = []
message = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serenity = { version = "0.12.4", features = ["model"] }
thiserror = "2.0.17"
typed-builder = "0.23.0"
